--- a/source/form.html
+++ b/source/form.html
@@ -7,10 +7,10 @@
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
   <script>
-      // Picture element HTML5 shiv
-      document.createElement("picture");
-    </script>
-    <script src="js/picturefill.min.js" async></script>
+    // Picture element HTML5 shiv
+    document.createElement("picture");
+  </script>
+  <script src="js/picturefill.min.js" async></script>
 
 </head>
 
@@ -54,43 +54,43 @@
 
     <section class="form">
       <h1 class="form__headline">Подбор программы</h1>
-      <p class="form__desc">
-        Заполните анкету и мы подберем программу питания для вашего кота
+      <p class="form__desc">Заполните анкету и мы подберем программу питания для вашего кота
       </p>
-      <form action="https://echo.htmlacademy.ru" method="post" class="form__main">
+      <form class="form__main" action="https://echo.htmlacademy.ru" method="post">
         <div class="form__wrapper">
           <fieldset class="form__cat-data">
+            <ul class="form__cat-data-list">
+              <li class="form__row">
+                <label for="cat-name" class="form__field-label">Имя:*</label>
+                <input type="text" id="cat-name" name="cat-name" placeholder="Барсик" required>
+              </li>
 
-            <div class="form__row">
-              <label for="cat-name" class="form__field-label">Имя:*</label>
-              <input type="text" id="cat-name" name="cat-name" placeholder="Барсик" required>
-            </div>
+              <li class="form__row">
+                <label for="cat-weight" class="form__field-label">Вес (кг):*</label>
+                <input type="text" id="cat-weight" name="cat-weight" placeholder="7" required>
+              </li>
+              <li class="form__row">
+                <label for="cat-age" class="form__field-label">Возраст (лет):</label>
+                <input type="text" id="cat-age" name="cat-age" placeholder="7">
 
-            <div class="form__row">
-              <label for="cat-weight" class="form__field-label">Вес (кг):*</label>
-              <input type="text" id="cat-weight" name="cat-weight" placeholder="7" required>
-            </div>
-            <div class="form__row">
-              <label for="cat-age" class="form__field-label">Возраст (лет):</label>
-              <input type="text" id="cat-age" name="cat-age" placeholder="7">
-
-            </div>
+              </li>
+            </ul>
           </fieldset>
           <!-- радиокнопки выбора программы-->
           <fieldset class="form__program-choise">
             <ul class="form__programs-list">
               <li class="form__programs-item">
-                <input type="radio" id="slim" name="program-choise" value="slim" checked>
-                <label for="slim" class="form__field-label">Похудение</label>
+                <input class="visually-hidden" type="radio" id="slim" name="program-choise" value="slim" checked>
+                <label for="slim" class="form__field-label ">Похудение</label>
               </li>
 
               <li class="form__programs-item">
-                <input type="radio" id="pro" name="program-choise" value="pro">
-                <label for="pro" class="form__field-label">Набор массы</label>
+                <input class="visually-hidden" type="radio" id="pro" name="program-choise" value="pro">
+                <label for="pro" class="form__field-label ">Набор массы</label>
               </li>
 
               <li class="form__programs-item">
-                <input type="radio" id="unknown" name="program-choise" value="unknown">
+                <input class="visually-hidden" type="radio" id="unknown" name="program-choise" value="unknown">
                 <label for="unknown" class="form__field-label">Не знаю (Нужен ваш совет)</label>
               </li>
             </ul>
@@ -98,14 +98,17 @@
         </div>
         <!-- Контактные данные (владельца кота) -->
 
+        <hr class="line">
+
         <fieldset class="form__cat-owner-data">
+
           <legend class="form__fieldset-headline">Контактные данные (владельца кота)</legend>
+
           <ul class="form__owner-data-list">
             <li class="form__row">
               <label for="cat-owner-email" class="form__field-label">E-mail:*</label>
-              <input type="email" id="cat-owner-email" name="cat-owner-email" class="cat-owner-email"
-                placeholder="kuklachev@gmail.com" required>
-              <svg width="18" height="14">
+              <input type="email" id="cat-owner-email" name="cat-owner-email" placeholder="kuklachev@gmail.com" required>
+              <svg class="form__icon" width="18" height="14">
                 <use xlink:href="#icon-mail"></use>
               </svg>
             </li>
@@ -113,7 +116,7 @@
             <li class="form__row">
               <label for="cat-owner-phone" class="form__field-label">Телефон:*</label>
               <input type="phone" id="cat-owner-phone" name="cat-owner-phone" placeholder="8 (960) 900-60-90" required>
-              <svg width="21" height="21">
+              <svg class="form__icon" width="21" height="21">
                 <use xlink:href="#icon-phone"></use>
               </svg>
             </li>
@@ -121,37 +124,38 @@
         </fieldset>
 
 
-            <!-- Комментарий -->
-            <hr>
+
+        <!-- Комментарий -->
+        <hr class="line">
         <fieldset class="form__comment">
           <legend class="form__fieldset-headline">Комментарий</legend>
-          <textarea name="comment">Расскажите обо всех повадках кота</textarea>
+          <textarea name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
 
 
         <!-- Дополнительно -->
-
+        <hr class="line">
         <fieldset class="form__addition">
           <legend class="form__fieldset-headline">Дополнительно</legend>
           <ul class="form__addition-list">
 
             <li class="form__addition-item">
-              <input type="checkbox" id="sugar-sub" name="sugar-sub" value="slim" checked>
+              <input class="visually-hidden" type="checkbox" id="sugar-sub" name="sugar-sub" value="slim" checked>
               <label for="sugar-sub" class="form__field-label">Сахарозаменитель</label>
             </li>
 
             <li class="form__addition-item">
-              <input type="checkbox" id="water" name="water" value="water">
+              <input class="visually-hidden" type="checkbox" id="water" name="water" value="water">
               <label for="water" class="form__field-label">Питьевая вода</label>
             </li>
 
             <li class="form__addition-item">
-              <input type="checkbox" id="milk" name="milk" value="milk">
+              <input class="visually-hidden" type="checkbox" id="milk" name="milk" value="milk">
               <label for="milk" class="form__field-label">Молоко</label>
             </li>
 
             <li class="form__addition-item">
-              <input type="checkbox" id="vitamins" name="vitamins" value="vitamins">
+              <input class="visually-hidden" type="checkbox" id="vitamins" name="vitamins" value="vitamins">
               <label for="vitamins" class="form__field-label">Витамины</label>
             </li>
 
@@ -234,7 +238,7 @@
       </div>
     </div>
   </footer>
-  <div id="YMapsID" style="width:100%;height:400px"></div>
+  <div id="YMapsID" style="width:100%;height:400px" class="visually-hidden"></div>
 
   <script src="js/app.js"></script>
   <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
@@ -247,11 +251,12 @@
 
 
       if (window.matchMedia('(max-width: 1300px)').matches) {
-  // do functionality on screens smaller than 768px
-  map.setCenter(new YMaps.GeoPoint(30.32305450, 59.93863106), 16);}
-  else  {
-    map.setCenter(new YMaps.GeoPoint(30.31305450, 59.93863106), 16);
-  }
+        // do functionality on screens smaller than 768px
+        map.setCenter(new YMaps.GeoPoint(30.32305450, 59.93863106), 16);
+      }
+      else {
+        map.setCenter(new YMaps.GeoPoint(30.31305450, 59.93863106), 16);
+      }
 
       // Устанавливает начальные параметры отображения карты: центр карты и коэффициент масштабирования
 
