--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,7 +20,7 @@
   </div>
 
   <header class="page-header">
-    <a class="page-header__logo">
+    <a class="page-header__logo" href="index.html">
 
       <picture>
         <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
@@ -382,14 +382,7 @@
           <span class="contacts__address-city">Санкт-Петербург</span>
         </p>
       </div>
-
-      <a href="map.html" class="contacts__map-link  contacts__map-image">
-        <iframe
-          src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor"
-          width="100%" height="400" frameborder="0"></iframe>
-
-
-      </a>
+      <div class="contacts__map-image" id="YMapsID" style="width:100%;height:400px"></div>
     </section>
   </main>
 
@@ -442,6 +435,8 @@
 
 
   <script src="js/app.js"></script>
+  <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
+  <script src="js/ymaps.js"></script>
 </body>
 
 </html>
