--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
   </div>
 
   <header class="page-header">
-    <a class="page-header__logo">
+    <a class="page-header__logo" href="index.html">
 
       <picture>
         <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
@@ -97,9 +97,7 @@
           </fieldset>
         </div>
         <!-- Контактные данные (владельца кота) -->
-
-        <hr class="line">
-
+        <div class="line"></div>
         <fieldset class="form__cat-owner-data">
 
           <legend class="form__fieldset-headline">Контактные данные (владельца кота)</legend>
@@ -107,7 +105,8 @@
           <ul class="form__owner-data-list">
             <li class="form__row">
               <label for="cat-owner-email" class="form__field-label">E-mail:*</label>
-              <input type="email" id="cat-owner-email" name="cat-owner-email" placeholder="kuklachev@gmail.com" required>
+              <input type="email" id="cat-owner-email" name="cat-owner-email" placeholder="kuklachev@gmail.com"
+                required>
               <svg class="form__icon" width="18" height="14">
                 <use xlink:href="#icon-mail"></use>
               </svg>
@@ -126,7 +125,8 @@
 
 
         <!-- Комментарий -->
-        <hr class="line">
+
+        <div class="line"></div>
         <fieldset class="form__comment">
           <legend class="form__fieldset-headline">Комментарий</legend>
           <textarea name="comment" placeholder="Расскажите обо всех повадках кота"></textarea>
@@ -134,7 +134,8 @@
 
 
         <!-- Дополнительно -->
-        <hr class="line">
+
+        <div class="line"></div>
         <fieldset class="form__addition">
           <legend class="form__fieldset-headline">Дополнительно</legend>
           <ul class="form__addition-list">
@@ -183,13 +184,8 @@
         </p>
       </div>
 
-      <a href="map.html" class="contacts__map-link  contacts__map-image">
-        <iframe
-          src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor"
-          width="100%" height="400" frameborder="0"></iframe>
+      <div class="contacts__map-image" id="YMapsID" style="width:100%;height:400px"></div>
 
-
-      </a>
     </section>
   </main>
   <footer class="page-footer">
@@ -238,50 +234,12 @@
       </div>
     </div>
   </footer>
-  <div id="YMapsID" style="width:100%;height:400px" class="visually-hidden"></div>
+
 
   <script src="js/app.js"></script>
+
   <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
-  <script type="text/javascript">
-    // Создает обработчик события window.onLoad
-    YMaps.jQuery(function () {
-      // Создает экземпляр карты и привязывает его к созданному контейнеру
-      var map = new YMaps.Map(YMaps.jQuery("#YMapsID")[0]);
-
-
-
-      if (window.matchMedia('(max-width: 1300px)').matches) {
-        // do functionality on screens smaller than 768px
-        map.setCenter(new YMaps.GeoPoint(30.32305450, 59.93863106), 16);
-      }
-      else {
-        map.setCenter(new YMaps.GeoPoint(30.31305450, 59.93863106), 16);
-      }
-
-      // Устанавливает начальные параметры отображения карты: центр карты и коэффициент масштабирования
-
-
-      var placemark = new YMaps.Placemark(new YMaps.GeoPoint(30.32305450, 59.93863106), {
-        iconImageHref: '../img/map-pin.png',
-        iconImageSize: [40, 41],
-        draggable: 1,
-        hintOptions: {
-          maxWidth: 100,
-          showTimeout: 200,
-          offset: new YMaps.Point(5, 5)
-        },
-        balloonOptions: {
-          maxWidth: 70,
-          hasCloseButton: false,
-          mapAutoPan: 0
-        }
-      });
-      placemark.name = "Название";
-      placemark.description = "Описание";
-      map.addOverlay(placemark);
-
-    })
-  </script>
+  <script src="js/ymaps.js"></script>
 
 </body>
 
