--- a/source/index.html
+++ b/source/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="Кэт энерджи-магазин функционального питания для котов">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" href="css/style.min.css" as="style">
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
   <script>
-      // Picture element HTML5 shiv
-      document.createElement("picture");
-    </script>
-    <script src="js/picturefill.min.js" async></script>
+    // Picture element HTML5 shiv
+    document.createElement("picture");
+  </script>
+  <script src="js/picturefill.min.js" async></script>
 
 
 </head>
@@ -51,13 +51,13 @@
         </div>
         <div class="programs__image-container">
           <picture>
-            <source type="image/webp" media="(min-width: 1200px)"
+            <source type="image/webp" media="(min-width: 1300px)"
               srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)"
               srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x">
             <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)"
+            <source media="(min-width: 1300px)"
               srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
             <img class="programs__can" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
@@ -115,26 +115,20 @@
             Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
             изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
           </p>
-          <table class="case__table data-table">
-
-            <tbody>
-
-              <tr class="data-table__item">
-                <td class="data-table__field">снижение веса</td>
-                <td class="data-table__value">5 кг</td>
-              </tr>
-              <tr class="data-table__item">
-                <td class="data-table__field">затрачено времени</td>
-                <td class="data-table__value">60 дней</td>
-              </tr>
-
-              <tr class="data-table__item-cost">
-                <td class="data-table__field-cost">Затраты на питание: </td>
-                <td class="data-table__value-cost">15 000 руб.</td>
-              </tr>
-            </tbody>
-
-          </table>
+          <ul class="case__table data">
+            <li class="data-wrapper">
+              <div class="data__value">5 кг</div>
+              <span class="data__field">снижение веса</span>
+            </li>
+            <li class="data-wrapper">
+              <div class="data__value">60 дней</div>
+              <span class="data__field">затрачено времени</span>
+            </li>
+            <li class="data__item-cost">
+              <span class="data__field-cost">Затраты на питание: </span>
+              <div class="data__value-cost">15 000 руб.</div>
+            </li>
+          </ul>
         </div>
         <div class="case__slider slider">
 
@@ -143,26 +137,26 @@
           <div class="slider__inner">
             <div class="slider__slides">
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)"
+                <source type="image/webp" media="(min-width: 1300px)"
                   srcset="img/before-desktop@1x.webp 1x, img/before-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="img/before-tablet@1x.webp 1x, img/before-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/before-mobile@1x.webp 1x, img/before-mobile@2x.webp 2x">
 
-                <source media="(min-width: 1200px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.jpg 1x, img/before-tablet@2x.jpg 2x">
+                <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png 1x, img/before-tablet@2x.png 2x">
                 <img class="slider__foto-before" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x"
                   alt="Кэт энерджи">
               </picture>
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)"
+                <source type="image/webp" media="(min-width: 1300px)"
                   srcset="img/after-desktop@1x.webp 1x, img/after-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)"
                   srcset="img/after-tablet@1x.webp 1x, img/after-tablet@2x.webp 2x">
                 <source type="image/webp" srcset="img/after-mobile@1x.webp 1x, img/after-mobile@2x.webp 2x">
 
-                <source media="(min-width: 1200px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/after-tablet@1x.jpg 1x, img/after-tablet@2x.jpg 2x">
+                <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png 1x, img/after-desktop@2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png 1x, img/after-tablet@2x.png 2x">
                 <img class="slider__foto-after" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x"
                   alt="Кэт энерджи">
               </picture>
@@ -191,13 +185,11 @@
         </p>
       </div>
 
-      <a href="map.html" class="contacts__map-link  contacts__map-image">
-        <iframe
-          src="https://yandex.ru/map-widget/v1/?um=constructor%3A523ffa5e96fad9566d3dfbaadcbcf78afacc307a0118f29d5d866989295db9cf&amp;source=constructor"
-          width="100%" height="400" frameborder="0"></iframe>
+
+        <div class="contacts__map-image" id="YMapsID" style="width:100%;height:400px"></div>
 
 
-      </a>
+
     </section>
 
   </main>
@@ -250,7 +242,8 @@
   </footer>
 
   <script src="js/app.js"></script>
-
+  <script src="https://api-maps.yandex.ru/1.1/index.xml" type="text/javascript"></script>
+  <script src="js/ymaps.js"></script>
 </body>
 
 </html>
