--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <script>
     // Picture element HTML5 shiv
     document.createElement("picture");
