--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="preload" href="css/style.min.css" as="style">
   <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
   <script>
     // Picture element HTML5 shiv
     document.createElement("picture");
